--- a/templates/apic-config.j2
+++ b/templates/apic-config.j2
@@ -1,24 +1,6 @@
 top; configure terminal;
     sw default
 
-    web-mgmt
-        admin-state enabled
-        local-address {{ backend_ip }}
-        port 9090
-    exit
-
-    xml-mgmt
-        admin-state enabled
-        local-address {{ backend_ip }}
-        port {{ xml_mgmt_port }}
-    exit
-
-    rest-mgmt
-        admin-state enabled
-        local-address {{ backend_ip }}
-        port {{ rest_mgmt_port }}
-    exit
-
     system
         name "{{ fqdn }}"
     exit
@@ -34,6 +16,24 @@ top; configure terminal;
         ip-address {{ peer.ip }}
     exit
     {% endfor %}
+
+    web-mgmt
+        admin-state enabled
+        local-address {{ fqdn }}
+        port 9090
+    exit
+
+    xml-mgmt
+        admin-state enabled
+        local-address {{ fqdn }}
+        port {{ xml_mgmt_port }}
+    exit
+
+    rest-mgmt
+        admin-state enabled
+        local-address {{ fqdn }}
+        port {{ rest_mgmt_port }}
+    exit
 
     domain apiconnect; visible default; exit;
     sw apiconnect
@@ -74,7 +74,7 @@ top; configure terminal;
     {% for peering_object_name in ['subs', 'rate-limit', 'gwd', 'probe', 'gws-rate-limit'] %}
     gateway-peering {{ peering_object_name }}
         admin enabled
-        local-address {{ backend_ip }}
+        local-address {{ fqdn }}
         local-port {{ 16383 + loop.index }}
         monitor-port {{ 26383 + loop.index }}
         priority {{ gateway_peering_priority }}
@@ -106,7 +106,7 @@ top; configure terminal;
 
     apic-gw-service
       admin-state enabled
-      local-address {{ backend_ip }}
+      local-address {{ fqdn }}
       local-port 3000
       api-gw-address {{ frontend_ip }}
       api-gw-port 443
