--- a/templates/apic-config.j2
+++ b/templates/apic-config.j2
@@ -19,19 +19,19 @@ top; configure terminal;
 
     web-mgmt
         admin-state enabled
-        local-address {{ fqdn }}
+        local-address {{ backend_fqdn }}
         port 9090
     exit
 
     xml-mgmt
         admin-state enabled
-        local-address {{ fqdn }}
+        local-address {{ backend_fqdn }}
         port {{ xml_mgmt_port }}
     exit
 
     rest-mgmt
         admin-state enabled
-        local-address {{ fqdn }}
+        local-address {{ backend_fqdn }}
         port {{ rest_mgmt_port }}
     exit
 
@@ -74,7 +74,7 @@ top; configure terminal;
     {% for peering_object_name in ['subs', 'rate-limit', 'gwd', 'probe', 'gws-rate-limit'] %}
     gateway-peering {{ peering_object_name }}
         admin enabled
-        local-address {{ fqdn }}
+        local-address {{ backend_fqdn }}
         local-port {{ 16383 + loop.index }}
         monitor-port {{ 26383 + loop.index }}
         priority {{ gateway_peering_priority }}
@@ -106,9 +106,9 @@ top; configure terminal;
 
     apic-gw-service
       admin-state enabled
-      local-address {{ fqdn }}
+      local-address {{ backend_fqdn }}
       local-port 3000
-      api-gw-address {{ frontend_ip }}
+      api-gw-address {{ frontend_fqdn }}
       api-gw-port 443
       v5-compatibility-mode off
       ssl-server gwd-to-mgmt
